# walkie-ai

./: .env.example  .gitignore  README.md  main.py  mcp_config.json  pyproject.toml  test_basic.py  test_mcp_server.py
config/: prompts.yaml  settings.yaml
examples/: example_asr.py  example_tts.py
src/agent/: core.py  mcp_server.py  memory.py  state.py
src/database/: __init__.py  vector_db.py
src/interface/asr/: __init__.py  base.py  microphone.py  speech_to_text.py
src/interface/asr/providers/: __init__.py  google.py
src/interface/tts/: __init__.py  base.py  text_to_speech.py
src/interface/tts/providers/: __init__.py  elevenlabs.py
src/utils/: logger.py
test/: test_agent.py
